# rpi_epaper

./: Readme.md
ggcal/: CMakeLists.txt  build.bat  build_rpi.sh  cal_console.go  disp_console.go  go.mod  main.go
ggcal/cal/: gcalendar.go  lunar_cal.go
ggcal/disp/: base_obj.go  env.bat.in  env.sh.in  epaper_driver.go  grid_ctrl.go  image_ctrl.go  large_day_ctrl.go  layout.go  rect_ctrl.go  sdl_driver.go  small_day_ctrl.go  surface.go  text_ctrl.go
ggcal/disp/epaper/: DEV_Config.c  DEV_Config.h  EPD_12in48b.c
ggcal/log/: logger.go
system/: setup_zero2w.sh
system/etc/ggcal/: layout.yaml
system/etc/modules-load.d/: serial-gadget.conf
system/etc/systemd/: timesyncd.conf
system/etc/systemd/network/: 10-wifi.network
system/etc/systemd/system/systemd-networkd.service.d/: override.conf
system/etc/wpa_supplicant/: wpa_supplicant-wlan0.conf
system/usr/lib/systemd/system/: gocalendar.service  wpa_supplicant@.service
